correcciones para preentrega

--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -48,69 +48,101 @@
     </header>
 
     <main class="main">
-
       <div class="row populares">
-        <h3 class="subTitulo">Todas las Recetas</h3>
+        <h2 class="subTitulo">Todas las Recetas</h2>
         <!-- furamente mostrara las recetas mas bisitadas -->
 
-      <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-xl-6 col-md-6 col-xs-12 card-cont">
-        <div class="card">
-            <img src="../img/Leche-infusionada-de-marihuana.jpg" class="card-img-top" alt="...">
+        <div
+          data-aos="fade-right"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine"
+          class="col-xl-6 col-md-6 col-xs-12 card-cont"
+        >
+          <div class="card">
+            <img
+              src="../img/Leche-infusionada-de-marihuana.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-                consequuntur temporibus veniam deleniti ipsam architecto
-                perspiciatis, repudiandae tenetur quam libero corporis eos nostrum
-                iste, tempore facilis aliquam? Dolores, quidem iusto!
+                Debido a que los cannabinoides requieren que los lípidos se
+                unan, la mejor leche o productos sustitutos de la leche (leche
+                de nueces, leche de avena, leche de soja, etc.) para usar en
+                infusiones de cannabis serán del tipo entera o en crema.
               </p>
+              <a href="#" class="btn btn-primary border-dark">Leer Más</a>
             </div>
-        </div>
-    </div>
-
-    <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-xl-6 col-md-6 col-xs-12 card-cont">
-      <div class="card">
-          <img src="../img/Miel-infusionada-de-marihuana.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              consequuntur temporibus veniam deleniti ipsam architecto
-              perspiciatis, repudiandae tenetur quam libero corporis eos nostrum
-              iste, tempore facilis aliquam? Dolores, quidem iusto!
-            </p>
           </div>
-      </div>
-  </div>
-
-  <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-xl-6 col-md-6 col-xs-12 card-cont">
-    <div class="card">
-        <img src="../img/Ositos-de-goma-infusionados-de-marihuana.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            consequuntur temporibus veniam deleniti ipsam architecto
-            perspiciatis, repudiandae tenetur quam libero corporis eos nostrum
-            iste, tempore facilis aliquam? Dolores, quidem iusto!
-          </p>
         </div>
-    </div>
-</div>
 
-<div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-xl-6 col-md-6 col-xs-12 card-cont">
-  <div class="card">
-      <img src="../img/Nutella.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          consequuntur temporibus veniam deleniti ipsam architecto
-          perspiciatis, repudiandae tenetur quam libero corporis eos nostrum
-          iste, tempore facilis aliquam? Dolores, quidem iusto!
-        </p>
+        <div
+          data-aos="fade-left"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine"
+          class="col-xl-6 col-md-6 col-xs-12 card-cont"
+        >
+          <div class="card">
+            <img
+              src="../img/Miel-infusionada-de-marihuana.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p>
+                Preparar miel infusionada de cannabis no podría ser más sencillo
+                ya que utiliza solo dos ingredientes, algo de calor indirecto y
+                tiempo en baño maría, luego de eso las posibilidades serán
+                infinitas.
+              </p>
+              <a href="#" class="btn btn-primary border-dark">Leer Más</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          data-aos="fade-right"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine"
+          class="col-xl-6 col-md-6 col-xs-12 card-cont"
+        >
+          <div class="card">
+            <img
+              src="../img/Ositos-de-goma-infusionados-de-marihuana.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p>
+                De todos los caramelos de marihuana, los ositos de goma se
+                encuentran entre los más deseados, pero por lo general son
+                difíciles de encontrar en dispensarios legales debido a que en
+                muchas partes se han prohibido.
+              </p>
+              <a href="#" class="btn btn-primary border-dark">Leer Más</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          data-aos="fade-left"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine"
+          class="col-xl-6 col-md-6 col-xs-12 card-cont"
+        >
+          <div class="card">
+            <img src="../img/Nutella.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p>
+                Aprende a preparar tu propia nutella de cannabis casera, ideal
+                para disfrutar con tostadas, panqueques, helados, hotcakes,
+                frutas, cereales o simplemente para comer a cucharadas.
+              </p>
+              <a href="#" class="btn btn-primary border-dark">Leer Más</a>
+            </div>
+          </div>
+        </div>
       </div>
-  </div>
-</div>
-
-    </div>
-
     </main>
 
     <footer>
