--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
 
     <main class="main">
 
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/Limonada-de-cannabis.jpg" class="d-block w-100 imgCarousel" alt="...">
@@ -64,19 +59,11 @@
             <img src="img/Miel-infusionada-de-marihuana.jpg" class="d-block w-100 imgCarousel" alt="...">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
 
       <div class="row populares">
 
-        <h3 class="subTitulo">Recetas Populares</h3>
+        <h2 class="subTitulo">Recetas Populares</h2>
         <!-- furamente mostrara las recetas mas bisitadas -->
          
         <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-xl-6 col-md-6 col-xs-12 card-cont">
@@ -88,6 +75,7 @@
                   una de las formas más simples y comunes de preparar comestibles a
                   partir de cannabis.
                 </p>
+                <a href="#" class="btn btn-primary border-dark">Leer Más</a>
               </div>
           </div>
       </div>
@@ -102,6 +90,7 @@
                 los coffeeshops de Ámsterdam, en donde se sirve de las más diversas
                 formas y sabores.
               </p>
+              <a href="#" class="btn btn-primary border-dark">Leer Más</a>
             </div>
         </div>
     </div>
@@ -110,6 +99,7 @@
       <div class="card">
           <img src="img/Receta-de-Galletas-de-Marihuana.jpg" class="card-img-top" alt="...">
           <div class="card-body">
+            
             <p class="card-text">
               Hoy en día podemos encontrar docenas de recetas y libros al respecto
               en donde encontrarás todo tipo de preparaciones, desde aperitivos
@@ -117,6 +107,7 @@
               esta tradicional receta de galletas de marihuana para preparar en
               casa.
             </p>
+            <a href="#" class="btn btn-primary border-dark">Leer Más</a>
           </div>
       </div>
   </div>
@@ -130,6 +121,7 @@
             preparar como recompensa de un caluroso día de verano, siendo además
             increíblemente fácil de preparar.
           </p>
+          <a href="#" class="btn btn-primary border-dark">Leer Más</a>
         </div>
     </div>
 </div>
